@@ -1,6 +1,10 @@
+- seeding, not clearing pieces out of cache!
+- store graph of download progress for debugging (bytes/s, # conns, etc)
+- lazy load disks and dont show notification if torrent not active/loaded
+- download in progress notification update name when metadata present
+- check for lastError in torrent metadata save. (FILE_ERROR_NO_SPACE)
+- saving large file to google drive gives hard disk full notification.
 - web server leaving ports open ? after many ctrl-r it runs out of retries on listen
-- track how many people click start without torrent onboarding ?
-- have unpacked users check for latest version string from web ? Also report whether update_url in manifest
 - right click to remove tracker
 - closing choked connections needs to account not for whole swarm size, but actually valid swarm size
 - bridges when no incomplete pieces after seek area, remove bridges. also when long delay temp. turn on endgame?
@@ -15,13 +19,7 @@
 - move calculate_speed into timer independent from UI render
 - store bitfield as binary string in local storage
 - show notification when update available, or when update was installed.
-- view file blob url make it in background
-- add a URL handler for the protocolhandler registered url
 - small swarm debugging
-- bytes received show (already downloaded + current session amount)
-- clear ETA on finish
-- try to auto setup handling magnet link (or at least put in options)
-- build script to remove startup delay (waiting for webkit inspector. also DEVMODE asks for getManifest() ...)
 - run overnight, look for memory leak/crash on low memory system
 
 2.1 fixes
